@@ -184,10 +184,10 @@ enum dwarf_form
     DW_FORM_flag_present = 0x19,
     DW_FORM_ref_sig8 = 0x20,
 #define DW_FORM_sig8  DW_FORM_ref_sig8  /* Note: The use of DW_FORM_sig8 is deprecated.  */
-    /* Extensions for Fission.  */
-    DW_FORM_GNU_ref_index = 0x70,
-    DW_FORM_GNU_addr_index = 0x71,
-    DW_FORM_GNU_str_index = 0x72
+    /* Extensions for Fission.  See http://gcc.gnu.org/wiki/DebugFission.  */
+    DW_FORM_GNU_ref_index = 0x1f00,
+    DW_FORM_GNU_addr_index = 0x1f01,
+    DW_FORM_GNU_str_index = 0x1f02
   };
 
 /* Attribute names and codes.  */
@@ -355,7 +355,7 @@ enum dwarf_attribute
     /* Template template argument name.
        See http://gcc.gnu.org/wiki/TemplateParmsDwarf .  */
     DW_AT_GNU_template_name = 0x2110,
-    /* Extensions for Fission.  */
+    /* Extensions for Fission.  See http://gcc.gnu.org/wiki/DebugFission.  */
     DW_AT_GNU_dwo_name = 0x2130,
     DW_AT_GNU_dwo_id = 0x2131,
     DW_AT_GNU_ref_base = 0x2132,
